# CryliaPlayer

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: ConditionalCircularLinkedList.cpp.FD87E6BCC915CCD1.idx  ConditionalCircularLinkedList.h.B8C8DDA6C2A08E88.idx  DatabaseManager.cpp.A503032B25B9DAAF.idx  DatabaseManager.h.23E39B73DE500DF4.idx  FloatingControls.cpp.9D6FC09D4D6F0FCF.idx  FloatingControls.h.D700FFEBDCCA4F1D.idx  HomePage.cpp.9F3A1A2E76067ACC.idx  HomePage.h.CF8699CD8CEC90BC.idx  LocalFolderPage.cpp.54733FBF83D2A274.idx  LocalFolderPage.h.D9CD5A943852BAF0.idx  MainWidget.cpp.5DFC36EBDED209E4.idx  MainWidget.h.9D6875C73901EEB4.idx  MainWindow.cpp.6F03657BD43A954A.idx  MainWindow.h.86D281384F92517D.idx  MusicPlayer.cpp.35246BE0F9B744D8.idx  MusicPlayer.h.55673DB92FB3CBAC.idx  NavButton.cpp.232950D13D6E2515.idx  NavButton.h.B2661538EA8CB03C.idx  Page.h.7236B7411CB0711C.idx  PageButton.cpp.BCA2460698AE4C50.idx  PageButton.h.511EB232CEA388B7.idx  PageManager.cpp.1B1901F3F7E349D2.idx  PageManager.h.540F872042D01058.idx  PageNavModule.cpp.B8A5436AE1D26BC0.idx  PageNavModule.h.A94ED7D15479146B.idx  PlaylistButton.cpp.D5C68B99FD7FDD82.idx  PlaylistButton.h.9600C49697E3BC79.idx  PlaylistNavModule.cpp.974D2EF27CEAA00B.idx  PlaylistNavModule.h.73386ED7039B9D14.idx  PlaylistPage.cpp.C16327D31185E2F1.idx  PlaylistPage.h.3202C9FD0097ABBA.idx  QOverlayout.cpp.B4E1724C37909521.idx  QOverlayout.h.35ABCC70DC986F47.idx  SettingsPage.cpp.0F7B559628C24FAD.idx  SettingsPage.h.4C6A7DAE17AA1AE9.idx  SongHistory.hpp.46F986F57DCF6132.idx  SongQueue.cpp.E3B5F5C8C8F97897.idx  SongQueue.h.E8386E8A98EC7134.idx  SvgToPixmap.hpp.26FC7AEAAFB57F5A.idx  audio.cpp.D0B3798878719D8D.idx  (+4 more)
.github/workflows/: c-cpp.yml
CryliaPlayer/: CMakeLists.txt
assets/: resources.qrc
debug/: CMakeCache.txt  CryliaPlayer.desktop  cmake_install.cmake
debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
debug/CryliaPlayer_autogen/: deps  mocs_compilation.cpp
debug/CryliaPlayer_autogen/3DODUE3C73/: moc_Page.cpp.d
debug/CryliaPlayer_autogen/AGCHITCVVE/: moc_HomePage.cpp.d
debug/CryliaPlayer_autogen/COGQYPW2KU/: moc_FloatingControls.cpp.d
debug/CryliaPlayer_autogen/CVJAWHJWUK/: moc_MusicPlayer.cpp.d
debug/CryliaPlayer_autogen/F6UBO54SDY/: moc_PlaylistNavModule.cpp.d
debug/CryliaPlayer_autogen/GT66W5ZSTU/: moc_MainWidget.cpp.d  moc_MainWindow.cpp.d
debug/CryliaPlayer_autogen/JNA6RAIDCM/: moc_PageNavModule.cpp.d
debug/CryliaPlayer_autogen/PEYXJO7ZAH/: moc_PlaylistPage.cpp.d
debug/CryliaPlayer_autogen/SE5LNZAIHG/: moc_PageManager.cpp.d
debug/CryliaPlayer_autogen/TGRORH44XD/: moc_SettingsPage.cpp.d
debug/CryliaPlayer_autogen/WT263M6TY3/: moc_NavButton.cpp.d
src/: CMakeLists.txt  CryliaPlayer.pro  FloatingControls.cpp  FloatingControls.h  PlaylistPage.cpp  PlaylistPage.h  PlaylistWidget.h  QOverlayout.cpp  QOverlayout.h  datetime.cpp  datetime.h  main.cpp  mainwindow.cpp  mainwindow.h  pages.cpp  pages.h
src/Controller/MusicPlayer/: MusicPlayer.cpp  MusicPlayer.h  MusicPlayer.hpp
src/Controller/PageManager/: PageManager.cpp  PageManager.h
src/Public/: MainWindow.cpp  MainWindow.h
src/Public/Modules/FloatingControls/: FloatingControls.cpp  FloatingControls.h
src/Public/Modules/PageNavigator/: pages.cpp  pages.h
src/Public/Modules/PlaylistNavigator/: PlaylistWidget.cpp  PlaylistWidget.h
src/Public/Tools/: SvgToPixmap.hpp
src/View/: MainWidget.cpp  MainWidget.h  MainWidget.hpp  MainWindow.cpp  MainWindow.h  MainWindow.hpp
src/View/Pages/: Page.h
src/View/Pages/Home/: HomePage.cpp  (+1 more)
src/View/Tools/: SvgToPixmap.hpp
src/core/Audio/: Audio.cpp  Audio.hpp
src/core/CliArgHandler/: CliArgHandler.cpp  CliArgHandler.h  CliArgHandler.hpp
src/core/Database/: DatabaseManager.cpp  DatabaseManager.h
src/core/Filemonitor/: Filemonitor.cpp  Filemonitor.hpp
src/core/Song/: Song.cpp  Song.hpp
src/core/SongHistory/: SongHistory.hpp
src/core/SongQueue/: SongQueue.cpp  SongQueue.h  SongQueue.hpp
src/core/audio/: audio.cpp  audio.h
src/core/song/: song.cpp  song.h
(+33 files in other folders)
